--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-handlebars": "^3.0.2",
+    "mysql2": "^2.1.0",
     "pug": "^2.0.4"
   }
 }
